test_translator/tests/data/checkpoint_1/errors/15_malformed_syntax/solution.py
# Solution also has syntax error
def func(a, b=None)
    return a + (b or 0)
